<resources>
    <string name="app_name">Sport Community</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="default_notification_channel_id" translatable="false">SportCommunity push channel</string>

    <string name="app_version">Версия приложения:\n%1s</string>

    <string name="download_start">Загрузка началась</string>
    <string name="download_error">Ошибка загрузки</string>

    <string name="choose">Выбрать</string>
    
    <string name="more_detailed">Веб-сайт</string>
    <string name="favorite">Избранное</string>

    <string name="favorite_save_success">Турнир добавлен в избранное</string>
    <string name="favorite_changed_success">Новый турнир добавлен в избранное</string>
    <string name="favorite_delete_success">Турнир удален из избранного</string>

    <string name="favorite_warning_title">Предупреждение!</string>
    <string name="favorite_warning_message">У вас уже выбран любимый турнир. Заменить?</string>

    <string name="debug_under_development">Функционал находится на стадии разработки</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!-- Tittle item bottom navigate -->
    <string name="bottom_tittle__calendar">Календарь</string>
    <string name="bottom_tittle__results">Результаты</string>
    <string name="bottom_tittle__tournament">Турнир</string>
    <string name="bottom_tittle__events">События</string>
    <string name="bottom_tittle__admin">Админка</string>

    <string name="menu_setting">Настройки</string>
    <string name="menu_about">О приложении</string>

    <string name="error_default">Что-то пошло не так =(</string>
    <string name="error_network_default">Ошибка сервера</string>
    <string name="error_network_connection">Ошибка сети</string>

    <string name="team_btn_results">Результаты</string>
    <string name="team_btn_tournament_table">Таблица</string>
    <string name="team_btn_squad">Состав</string>
    <string name="team_btn_calendar">Календарь</string>
    <string name="retry">Повторить</string>

    <string name="match_time">Время | %1s</string>
    <string name="match_stadium">Стадион | %1s</string>

    <string name="match_detail_segment_start">Матч начался</string>
    <string name="match_detail_segment_break">Перерыв</string>
    <string name="match_detail_segment_end">Матч окончен</string>

    <string name="label_position">№</string>
    <string name="label_name">Команда</string>
    <string name="label_games">И</string>
    <string name="label_wins">В</string>
    <string name="label_draws">Н</string>
    <string name="label_loses">П</string>
    <string name="label_differences">РМ</string>
    <string name="label_points">О</string>

    <string name="tournament__tournament_table">Турнирная таблица</string>
    <string name="tournament__cup_grid">Сетка турнира</string>
    <string name="tournament__statistics">Стастистика игроков</string>
    <string name="tournament__games">Игры</string>
    <string name="tournament__media">Медия</string>
    <string name="tournament__kdk">КДК</string>

    <string name="statistics_goals">Голы</string>
    <string name="statistics_assist">Передачи</string>
    <string name="statistics_yellow">Желтые карточки</string>
    <string name="statistics_yellow_short">ЖК</string>
    <string name="statistics_red">Красные карточки</string>
    <string name="statistics_red_short">КК</string>

    <string name="empty_media">Пусто</string>
    <string name="empty_calendar">Нет предстоящих игр</string>
    <string name="empty_result">Результатов пока нет</string>

    <string name="team_leaders">Лидеры</string>
    <string name="team_squad">Состав</string>
    <string name="team_games">Игры</string>
    <string name="team_history">История</string>
    <string name="team_media">Медия</string>

    <string name="squad__search_hint">Введите имя</string>

    <string name="admin_menu__assign_matches">Назначенные матчи</string>
    <string name="admin_menu__schedule">Расписание</string>
    <string name="admin_menu__matches_edit">Редактирование матчей</string>

    <string name="match_detail">Реузльтат матча</string>

    <string name="edit_match">Матч</string>
    <string name="edit_match__protocol">Протокол</string>
    <string name="edit_match__protocol_button">Далее</string>
    <string name="edit_match__protocol_warning">В случае удаления игрока с действием, действие пропадет</string>
    <string name="edit_match__protocol_empty_team">В одной из команд не выбрано ни одного игрока</string>
    <string name="edit_match__button_save_result">Сохрнаить результат</string>
    <string name="edit_match__button_edit_result">Редактировать результат</string>
    <string name="edit_match__button_save_action">Сохрнаить</string>
    <string name="edit_match__button_delete_action">Удалить</string>
    <string name="edit_match__button_edit_action">редактировать</string>
    <string name="edit_match__edit_player">Игрок</string>
    <string name="edit_match__edit_player_title">Выбор игрока</string>
    <string name="edit_match__edit_player_assistant_title">Выбор ассистента</string>
    <string name="edit_match__edit_assistant">Ассистент</string>
    <string name="edit_match__edit_time">Время</string>
    <string name="edit_match__edit_action">Действие</string>
    <string name="edit_match__edit_time_minutes">Минута</string>
    <string name="edit_match__edit_time_seconds">Секунда</string>
    <string name="edit_match__edit_time_two_dots"> : </string>
    <string name="edit_match__empty_score">Заполните счет</string>
    <string name="edit_match__warning_title">Предупреждение</string>
    <string name="edit_match__warning_message">При редактировании будут сброшены все голы. Продолжить?</string>

    <string name="assign_matches__tab_matches">Назначенные</string>
    <string name="assign_matches__tab_create">Создать</string>
    <string name="assign_matches__button_assign">Назначить</string>
    <string name="assign_matches__button_delete">Удалить</string>
    <string name="assign_matches__division">Дивизион</string>
    <string name="assign_matches__tour">Тур</string>
    <string name="assign_matches__two_dots_vs"> : </string>

    <string name="schedule_create__button">Создать</string>
    <string name="schedule_create__date">Дата</string>
    <string name="schedule_create__game_start">Время старта</string>
    <string name="schedule_create__stadium">Стадион</string>
    <string name="schedule_create__game_count">Количество игр*</string>
    <string name="schedule_create__half_time">Время тайма*</string>
    <string name="schedule_create__half_break">Перерыв между таймами</string>
    <string name="schedule_create__half_break_time">Время перерыва</string>
    <string name="schedule_create__break_between_game">Перерыв между матчами</string>
    <string name="schedule_create__break_between_game_time">Время перерыва</string>
    <string name="schedule_button_delete">Удалить</string>
    <string name="schedule_button_assign">Добавить</string>

    <string name="player_statistics__games">Игры</string>
    <string name="player_statistics__goals">Голы</string>
    <string name="player_statistics__assists">Передачи</string>
    <string name="player_statistics__penalty">Пенальти</string>
    <string name="player_statistics__penalty_out">Незабит. пен.</string>
    <string name="player_statistics__red_cards"> КК </string>
    <string name="player_statistics__yellow_cards"> ЖК </string>
    <string name="player_statistics__own_goals">Автоголы</string>


    <string name="player__career">Карьера игрока</string>
    <string name="player__current_club">Текущий клуб</string>
    <string name="player__last_activity">Последняя активность</string>
    <string name="player__actions">Действия:</string>


</resources>