<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_events"
        android:title="@string/bottom_tittle__events" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/bottom_tittle__calendar" />

    <item
        android:id="@+id/nav_graph_result"
        android:icon="@drawable/ic_ball_soccer"
        android:title="@string/bottom_tittle__results" />

    <item
        android:id="@+id/nav_graph_tournament"
        android:icon="@drawable/ic_trophy"
        android:title="@string/bottom_tittle__tournament" />
<!--    <item-->
<!--        android:id="@+id/nav_graph_admin"-->
<!--        android:icon="@drawable/ic_admin_panel"-->
<!--        android:title="@string/bottom_tittle__admin"/>-->

</menu>