<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="3dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPlayer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:hint="@string/edit_match__edit_player"
        app:layout_constraintEnd_toStartOf="@id/inputLayoutTime"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPlayer"
            style="@style/EditTextAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text14_sp_regular"
            tools:text="Glushko M." />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:hint="@string/edit_match__edit_time"
        app:layout_constraintBottom_toBottomOf="@id/inputLayoutPlayer"
        app:layout_constraintEnd_toStartOf="@id/inputLayoutAction"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/inputLayoutPlayer"
        app:layout_constraintTop_toTopOf="@id/inputLayoutPlayer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTime"
            style="@style/EditTextAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text12_sp_regular"
            tools:ignore="LabelFor"
            tools:text="10:30" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutAction"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_match__edit_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@id/inputLayoutTime"
        app:layout_constraintTop_toTopOf="@id/inputLayoutPlayer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAction"
            style="@style/EditTextAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text14_sp_regular"
            tools:ignore="LabelFor"
            tools:text="Гол" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutAssistant"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/edit_match__edit_assistant"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPlayer"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAssistant"
            style="@style/EditTextAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text14_sp_regular"
            tools:text="Glushko M." />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonSave"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elevation="0dp"
        android:text="@string/edit_match__button_save_action"
        app:layout_constraintEnd_toStartOf="@id/buttonDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutAssistant"
        app:layout_goneMarginTop="5dp" />

    <Button
        android:id="@+id/buttonDelete"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/schedule_button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSave"
        app:layout_constraintTop_toTopOf="@id/buttonSave" />

    <Button
        android:id="@+id/buttonEdit"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/edit_match__button_edit_action"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutAssistant"
        app:layout_goneMarginTop="5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>