<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        >

        <include
            android:id="@+id/itemTournamentTable"
            layout="@layout/item_tournament_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <include
            android:id="@+id/itemStatistics"
            layout="@layout/item_statistics_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/buttonGames"
            style="@style/Widget.Button.OutlinedButton.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tournament__games"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonMedia"
            style="@style/Widget.Button.OutlinedButton.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tournament__media"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonKdk"
            style="@style/Widget.Button.OutlinedButton.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tournament__kdk"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>